# CD2-AI

./: .gitignore  11.html  11.md  README.md  t.md  t.py  마크다운.md
AWS/G4dn/: Dockerfile  docker-compose-nginx.yaml  docker-compose.yaml  pyproject.toml
AWS/G4dn/app/: main.py
AWS/G4dn/app/api/: crud.py  router.py  schema.py
AWS/G4dn/app/model/: crud.py  model.py  nodes.py
AWS/G4dn/app/models/: nodes.py
AWS/T3/: docker-compose.yaml  pyproject.toml
AWS/T3/app/api/: crud.py  router.py  schema.py
AWS/T3/app/model/: crud.py  model.py  nodes.py  schema.py
G4dn/: Dockerfile  docker-compose.yaml  log.py  pyproject.toml  requirements.txt
G4dn/app/: main.py
G4dn/app/api/: crud.py  router.py  schema.py
G4dn/app/models/: classifiers.py  model.py  nodes.py  schema.py
G4dn/app/router/: router.py
Model_dev/: bart_evaluator.py  client_simulation.py  main.py  rl_criteria_config.py  rl_system.py  test_criterion_rl_weights.json
