[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["git-seungwon <tmddnjs3369@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.1"}
langgraph = "^0.3.30"
langchain-openai = "^0.3.12"
langchain-teddynote = "^0.3.45"
numpy = "^2.2.4"
python-dotenv = "^1.1.0"
transformers = "^4.51.3"
torch = "^2.6.0"
accelerate = "^1.6.0"
deepl = "^1.21.1"
langserve = "^0.3.1"
httpx = "^0.28.1"
sentencepiece = "^0.2.0"
ipython = "^9.1.0"
sse-starlette = "^2.2.1"
pydantic = "^2.11.3"
rich = "^14.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
