[tool.poetry]
name = "t3"
version = "0.1.0"
description = ""
authors = ["git-seungwon <tmddnjs3369@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
langchain-openai = "^0.3.16"
langgraph = "^0.4.2"
langchain-teddynote = "^0.3.45"
python-dotenv = "^1.1.0"
pydantic = "^2.11.4"
rich = "^14.0.0"
sse-starlette = "^2.3.4"
ipython = "^9.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
